include/yetty/ygui/ygui.h


typedef struct uv_loop_s uv_loop_t;
int yetty_ygui_init(void);
void yetty_ygui_shutdown(void);
struct yetty_ygui_engine;
struct yetty_ygui_widget;
struct yetty_ygui_theme;
typedef enum {
    YETTY_YGUI_CANVAS_FIXED, 
    YETTY_YGUI_CANVAS_FIT    
} ygui_canvas_mode_t;
typedef enum {
    YETTY_YGUI_SCALE_OFF, 
    YETTY_YGUI_SCALE_ON   
} ygui_scale_mode_t;
typedef void (*ygui_event_callback_t)(const ygui_event_t *event, void *userdata);
typedef void (*ygui_key_callback_t)(struct yetty_ygui_engine *engine, uint32_t key, int mods, void *userdata);
typedef void (*ygui_click_callback_t)(struct yetty_ygui_widget *widget, void *userdata);
typedef void (*ygui_check_callback_t)(struct yetty_ygui_widget *widget, int checked, void *userdata);
typedef void (*ygui_resize_callback_t)(struct yetty_ygui_engine *engine, float new_w, float new_h,
                                       float prev_w, float prev_h, void *userdata);
struct ygui_engine_ptr_result yetty_ygui_engine_create(const char *card_name, int x, int y, int cols,
                                                 int rows);
struct ygui_engine_ptr_result yetty_ygui_engine_create_with_pixel_hint(const char *card_name, int x,
                                                                 int y, float width_hint,
                                                                 float height_hint);
struct yetty_ycore_void_result yetty_ygui_engine_destroy(struct yetty_ygui_engine *engine);
struct yetty_ycore_void_result yetty_ygui_engine_show(struct yetty_ygui_engine *engine);
struct yetty_ycore_void_result yetty_ygui_engine_render(struct yetty_ygui_engine *engine);
struct yetty_ycore_void_result yetty_ygui_engine_layout(struct yetty_ygui_engine *engine);
void yetty_ygui_engine_attach(struct yetty_ygui_engine *engine, uv_loop_t *loop);
void yetty_ygui_engine_run(struct yetty_ygui_engine *engine);
void yetty_ygui_engine_stop(struct yetty_ygui_engine *engine);
void yetty_ygui_engine_set_size(struct yetty_ygui_engine *engine, float width, float height);
void yetty_ygui_engine_get_size(const struct yetty_ygui_engine *engine, float *width, float *height);
void yetty_ygui_engine_set_theme(struct yetty_ygui_engine *engine, struct yetty_ygui_theme *theme);
void yetty_ygui_engine_on_key(struct yetty_ygui_engine *engine, ygui_key_callback_t callback, void *userdata);
void yetty_ygui_engine_set_event_callback(struct yetty_ygui_engine *engine, ygui_event_callback_t callback,
                                    void *userdata);
int yetty_ygui_engine_is_dirty(const struct yetty_ygui_engine *engine);
void yetty_ygui_engine_mark_dirty(struct yetty_ygui_engine *engine);
void yetty_ygui_engine_set_canvas_mode(struct yetty_ygui_engine *engine, ygui_canvas_mode_t mode);
void yetty_ygui_engine_set_scale_mode(struct yetty_ygui_engine *engine, ygui_scale_mode_t mode);
void yetty_ygui_engine_on_resize(struct yetty_ygui_engine *engine, ygui_resize_callback_t callback, void *userdata);
float yetty_ygui_engine_get_zoom(const struct yetty_ygui_engine *engine);
float yetty_ygui_engine_get_scroll_x(const struct yetty_ygui_engine *engine);
float yetty_ygui_engine_get_scroll_y(const struct yetty_ygui_engine *engine);
void yetty_ygui_engine_subscribe_view_changes(struct yetty_ygui_engine *engine, int enable);
void yetty_ygui_engine_set_zoom(struct yetty_ygui_engine *engine, float level);
void yetty_ygui_engine_scroll_to(struct yetty_ygui_engine *engine, float x, float y);
void yetty_ygui_engine_scroll_by(struct yetty_ygui_engine *engine, float dx, float dy);
struct yetty_ygui_widget *yetty_ygui_engine_button(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                           float h, const char *label);
struct yetty_ygui_widget *yetty_ygui_engine_label(struct yetty_ygui_engine *engine, const char *id, float x, float y,
                          const char *text);
struct yetty_ygui_widget *yetty_ygui_engine_slider(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                           float h, float min_val, float max_val, float value);
struct yetty_ygui_widget *yetty_ygui_engine_checkbox(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                             float h, const char *label, int checked);
struct yetty_ygui_widget *yetty_ygui_engine_textinput(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                              float h, const char *placeholder);
struct yetty_ygui_widget *yetty_ygui_engine_panel(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                          float h);
struct yetty_ygui_widget *yetty_ygui_engine_hbox(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w, float h);
struct yetty_ygui_widget *yetty_ygui_engine_vbox(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w, float h);
struct yetty_ygui_widget *yetty_ygui_engine_dropdown(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                             float h, const char **options, int option_count);
struct yetty_ygui_widget *yetty_ygui_engine_progress(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                             float h, float value);
struct yetty_ygui_widget *yetty_ygui_engine_separator(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                              float h);
struct yetty_ygui_widget *yetty_ygui_engine_colorpicker(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                                float h);
struct yetty_ygui_widget *yetty_ygui_engine_popup(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w, float h,
                          const char *label);
struct yetty_ygui_widget *yetty_ygui_engine_collapsing_header(struct yetty_ygui_engine *engine, const char *id, float x, float y,
                                      float w, float h, const char *label);
struct yetty_ygui_widget *yetty_ygui_engine_tooltip(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                            float h, const char *label);
struct yetty_ygui_widget *yetty_ygui_engine_selectable(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                               float h, const char *label);
struct yetty_ygui_widget *yetty_ygui_engine_choicebox(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                              float h, const char **options, int option_count);
struct yetty_ygui_widget *yetty_ygui_engine_vscrollbar(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                               float h);
struct yetty_ygui_widget *yetty_ygui_engine_hscrollbar(struct yetty_ygui_engine *engine, const char *id, float x, float y, float w,
                               float h);
void yetty_ygui_widget_list_on_select(struct yetty_ygui_widget *list,
                                       ygui_click_callback_t cb, void *userdata);
void yetty_ygui_widget_tree_node_set_label(struct yetty_ygui_widget *node, const char *label);
const char *yetty_ygui_widget_tree_node_get_label(const struct yetty_ygui_widget *node);
void yetty_ygui_widget_tree_node_set_expanded(struct yetty_ygui_widget *node, int expanded);
int  yetty_ygui_widget_tree_node_is_expanded(const struct yetty_ygui_widget *node);
struct yetty_ygui_widget *
yetty_ygui_widget_tree_node_children(struct yetty_ygui_widget *node);
void yetty_ygui_widget_tree_node_on_toggle(struct yetty_ygui_widget *node,
                                            ygui_check_callback_t cb, void *userdata);
struct yetty_ygui_widget *yetty_ygui_engine_find(struct yetty_ygui_engine *engine, const char *id);
struct yetty_ygui_widget *yetty_ygui_engine_widget_at(struct yetty_ygui_engine *engine, float x, float y);
struct yetty_ygui_theme *yetty_ygui_theme_create(void);
struct yetty_ygui_theme *yetty_ygui_theme_create_default(void);
void yetty_ygui_theme_destroy(struct yetty_ygui_theme *theme);
void yetty_ygui_theme_set_padding(struct yetty_ygui_theme *theme, float sm, float med, float lg);
void yetty_ygui_theme_set_radius(struct yetty_ygui_theme *theme, float sm, float med, float lg);
void yetty_ygui_theme_set_row_height(struct yetty_ygui_theme *theme, float height);
void yetty_ygui_theme_set_font_size(struct yetty_ygui_theme *theme, float size);
void yetty_ygui_theme_set_scrollbar_size(struct yetty_ygui_theme *theme, float size);
void yetty_ygui_theme_set_bg_primary(struct yetty_ygui_theme *theme, uint32_t color);
void yetty_ygui_theme_set_bg_surface(struct yetty_ygui_theme *theme, uint32_t color);
void yetty_ygui_theme_set_bg_hover(struct yetty_ygui_theme *theme, uint32_t color);
void yetty_ygui_theme_set_text_primary(struct yetty_ygui_theme *theme, uint32_t color);
void yetty_ygui_theme_set_text_muted(struct yetty_ygui_theme *theme, uint32_t color);
void yetty_ygui_theme_set_accent(struct yetty_ygui_theme *theme, uint32_t color);
void yetty_ygui_theme_set_border(struct yetty_ygui_theme *theme, uint32_t color);
void yetty_ygui_theme_set_border_muted(struct yetty_ygui_theme *theme, uint32_t color);
void yetty_ygui_theme_set_bg_dropdown(struct yetty_ygui_theme *theme, uint32_t color);
void yetty_ygui_theme_set_overlay_modal(struct yetty_ygui_theme *theme, uint32_t color);
void yetty_ygui_theme_set_shadow(struct yetty_ygui_theme *theme, uint32_t color);
void yetty_ygui_theme_set_tooltip_bg(struct yetty_ygui_theme *theme, uint32_t color);
void yetty_ygui_theme_set_selection_bg(struct yetty_ygui_theme *theme, uint32_t color);
void yetty_ygui_theme_set_elevation(struct yetty_ygui_theme *theme, float low, float medium,
                                    float high, float alpha);
void yetty_ygui_theme_set_gradient(struct yetty_ygui_theme *theme, int enable);
void yetty_ygui_engine_set_input_fd(struct yetty_ygui_engine *engine, int fd);
void yetty_ygui_engine_set_output_fd(struct yetty_ygui_engine *engine, int fd);
void yetty_ygui_engine_set_card_size(struct yetty_ygui_engine *engine, int card_w, int card_h);
void yetty_ygui_engine_set_display_pixel_size(struct yetty_ygui_engine *engine, float width, float height);
uv_loop_t *yetty_ygui_engine_get_loop(struct yetty_ygui_engine *engine);
int yetty_ygui_engine_poll(struct yetty_ygui_engine *engine);
const char *yetty_ygui_get_error(void);
const char *yetty_ygui_version(void);