bindings/python/ygui.py

    _lib.yetty_ygui_widget_list_on_select.restype = None
    _lib.yetty_ygui_widget_tree_node_set_label.argtypes = [POINTER(yetty_ygui_widget), POINTER(c_char)]
    _lib.yetty_ygui_widget_tree_node_set_label.restype = None
    _lib.yetty_ygui_widget_tree_node_get_label.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_tree_node_get_label.restype = POINTER(c_char)
    _lib.yetty_ygui_widget_tree_node_set_expanded.argtypes = [POINTER(yetty_ygui_widget), c_int]
    _lib.yetty_ygui_widget_tree_node_set_expanded.restype = None
    _lib.yetty_ygui_widget_tree_node_is_expanded.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_tree_node_is_expanded.restype = c_int
    _lib.yetty_ygui_widget_tree_node_children.argtypes = [POINTER(yetty_ygui_widget)]
    _lib.yetty_ygui_widget_tree_node_children.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_widget_tree_node_on_toggle.argtypes = [POINTER(yetty_ygui_widget), POINTER(CFUNCTYPE(None, POINTER(yetty_ygui_widget), c_int, c_void_p)), c_void_p]
    _lib.yetty_ygui_widget_tree_node_on_toggle.restype = None
    _lib.yetty_ygui_engine_find.argtypes = [POINTER(yetty_ygui_engine), POINTER(c_char)]
    _lib.yetty_ygui_engine_find.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_engine_widget_at.argtypes = [POINTER(yetty_ygui_engine), c_float, c_float]
    _lib.yetty_ygui_engine_widget_at.restype = POINTER(yetty_ygui_widget)
    _lib.yetty_ygui_theme_create.argtypes = []
    _lib.yetty_ygui_theme_create.restype = POINTER(yetty_ygui_theme)
    _lib.yetty_ygui_theme_create_default.argtypes = []
    _lib.yetty_ygui_theme_create_default.restype = POINTER(yetty_ygui_theme)
    _lib.yetty_ygui_theme_destroy.argtypes = [POINTER(yetty_ygui_theme)]
    _lib.yetty_ygui_theme_destroy.restype = None
    _lib.yetty_ygui_theme_set_padding.argtypes = [POINTER(yetty_ygui_theme), c_float, c_float, c_float]
    _lib.yetty_ygui_theme_set_padding.restype = None
    _lib.yetty_ygui_theme_set_radius.argtypes = [POINTER(yetty_ygui_theme), c_float, c_float, c_float]
    _lib.yetty_ygui_theme_set_radius.restype = None
    _lib.yetty_ygui_theme_set_row_height.argtypes = [POINTER(yetty_ygui_theme), c_float]
    _lib.yetty_ygui_theme_set_row_height.restype = None
    _lib.yetty_ygui_theme_set_font_size.argtypes = [POINTER(yetty_ygui_theme), c_float]
    _lib.yetty_ygui_theme_set_font_size.restype = None
    _lib.yetty_ygui_theme_set_scrollbar_size.argtypes = [POINTER(yetty_ygui_theme), c_float]
    _lib.yetty_ygui_theme_set_scrollbar_size.restype = None
    _lib.yetty_ygui_theme_set_bg_primary.argtypes = [POINTER(yetty_ygui_theme), c_uint]
    _lib.yetty_ygui_theme_set_bg_primary.restype = None
    _lib.yetty_ygui_theme_set_bg_surface.argtypes = [POINTER(yetty_ygui_theme), c_uint]
    _lib.yetty_ygui_theme_set_bg_surface.restype = None
    _lib.yetty_ygui_theme_set_bg_hover.argtypes = [POINTER(yetty_ygui_theme), c_uint]
    _lib.yetty_ygui_theme_set_bg_hover.restype = None
    _lib.yetty_ygui_theme_set_text_primary.argtypes = [POINTER(yetty_ygui_theme), c_uint]
    _lib.yetty_ygui_theme_set_text_primary.restype = None
    _lib.yetty_ygui_theme_set_text_muted.argtypes = [POINTER(yetty_ygui_theme), c_uint]
    _lib.yetty_ygui_theme_set_text_muted.restype = None
    _lib.yetty_ygui_theme_set_accent.argtypes = [POINTER(yetty_ygui_theme), c_uint]
    _lib.yetty_ygui_theme_set_accent.restype = None
    _lib.yetty_ygui_theme_set_border.argtypes = [POINTER(yetty_ygui_theme), c_uint]
    _lib.yetty_ygui_theme_set_border.restype = None
    _lib.yetty_ygui_theme_set_border_muted.argtypes = [POINTER(yetty_ygui_theme), c_uint]
    _lib.yetty_ygui_theme_set_border_muted.restype = None
    _lib.yetty_ygui_theme_set_bg_dropdown.argtypes = [POINTER(yetty_ygui_theme), c_uint]
    _lib.yetty_ygui_theme_set_bg_dropdown.restype = None
    _lib.yetty_ygui_theme_set_overlay_modal.argtypes = [POINTER(yetty_ygui_theme), c_uint]
    _lib.yetty_ygui_theme_set_overlay_modal.restype = None
    _lib.yetty_ygui_theme_set_shadow.argtypes = [POINTER(yetty_ygui_theme), c_uint]
    _lib.yetty_ygui_theme_set_shadow.restype = None
    _lib.yetty_ygui_theme_set_tooltip_bg.argtypes = [POINTER(yetty_ygui_theme), c_uint]
    _lib.yetty_ygui_theme_set_tooltip_bg.restype = None
    _lib.yetty_ygui_theme_set_selection_bg.argtypes = [POINTER(yetty_ygui_theme), c_uint]
    _lib.yetty_ygui_theme_set_selection_bg.restype = None
    _lib.yetty_ygui_theme_set_elevation.argtypes = [POINTER(yetty_ygui_theme), c_float, c_float, c_float, c_float]
    _lib.yetty_ygui_theme_set_elevation.restype = None
    _lib.yetty_ygui_theme_set_gradient.argtypes = [POINTER(yetty_ygui_theme), c_int]
    _lib.yetty_ygui_theme_set_gradient.restype = None
    _lib.yetty_ygui_engine_set_input_fd.argtypes = [POINTER(yetty_ygui_engine), c_int]
    _lib.yetty_ygui_engine_set_input_fd.restype = None
    _lib.yetty_ygui_engine_set_output_fd.argtypes = [POINTER(yetty_ygui_engine), c_int]
    _lib.yetty_ygui_engine_set_output_fd.restype = None
    _lib.yetty_ygui_engine_set_card_size.argtypes = [POINTER(yetty_ygui_engine), c_int, c_int]
    _lib.yetty_ygui_engine_set_card_size.restype = None
    _lib.yetty_ygui_engine_set_display_pixel_size.argtypes = [POINTER(yetty_ygui_engine), c_float, c_float]
    _lib.yetty_ygui_engine_set_display_pixel_size.restype = None
    _lib.yetty_ygui_engine_get_loop.argtypes = [POINTER(yetty_ygui_engine)]
    _lib.yetty_ygui_engine_get_loop.restype = POINTER(uv_loop_s)
    _lib.yetty_ygui_engine_poll.argtypes = [POINTER(yetty_ygui_engine)]
    _lib.yetty_ygui_engine_poll.restype = c_int
    _lib.yetty_ygui_get_error.argtypes = []
    _lib.yetty_ygui_get_error.restype = POINTER(c_char)
    _lib.yetty_ygui_version.argtypes = []
    _lib.yetty_ygui_version.restype = POINTER(c_char)

def yetty_ygui_init():
    return _check_loaded().yetty_ygui_init()

def yetty_ygui_shutdown():
    return _check_loaded().yetty_ygui_shutdown()

def yetty_ygui_engine_create(card_name, x, y, cols, rows):
    return _check_loaded().yetty_ygui_engine_create(card_name, x, y, cols, rows)

def yetty_ygui_engine_create_with_pixel_hint(card_name, x, y, width_hint, height_hint):
    return _check_loaded().yetty_ygui_engine_create_with_pixel_hint(card_name, x, y, width_hint, height_hint)

def yetty_ygui_engine_destroy(engine):
    return _check_loaded().yetty_ygui_engine_destroy(engine)

def yetty_ygui_engine_show(engine):
    return _check_loaded().yetty_ygui_engine_show(engine)

def yetty_ygui_engine_render(engine):
    return _check_loaded().yetty_ygui_engine_render(engine)

def yetty_ygui_engine_layout(engine):
    return _check_loaded().yetty_ygui_engine_layout(engine)

def yetty_ygui_engine_attach(engine, loop):
    return _check_loaded().yetty_ygui_engine_attach(engine, loop)

def yetty_ygui_engine_run(engine):
    return _check_loaded().yetty_ygui_engine_run(engine)

def yetty_ygui_engine_stop(engine):
    return _check_loaded().yetty_ygui_engine_stop(engine)

def yetty_ygui_engine_set_size(engine, width, height):
    return _check_loaded().yetty_ygui_engine_set_size(engine, width, height)

def yetty_ygui_engine_get_size(engine, width, height):
    return _check_loaded().yetty_ygui_engine_get_size(engine, width, height)

def yetty_ygui_engine_set_theme(engine, theme):
    return _check_loaded().yetty_ygui_engine_set_theme(engine, theme)

def yetty_ygui_engine_on_key(engine, callback, userdata):
    return _check_loaded().yetty_ygui_engine_on_key(engine, callback, userdata)

def yetty_ygui_engine_set_event_callback(engine, callback, userdata):
    return _check_loaded().yetty_ygui_engine_set_event_callback(engine, callback, userdata)

def yetty_ygui_engine_is_dirty(engine):
    return _check_loaded().yetty_ygui_engine_is_dirty(engine)

def yetty_ygui_engine_mark_dirty(engine):
    return _check_loaded().yetty_ygui_engine_mark_dirty(engine)

def yetty_ygui_engine_set_canvas_mode(engine, mode):
    return _check_loaded().yetty_ygui_engine_set_canvas_mode(engine, mode)

def yetty_ygui_engine_set_scale_mode(engine, mode):
    return _check_loaded().yetty_ygui_engine_set_scale_mode(engine, mode)

def yetty_ygui_engine_on_resize(engine, callback, userdata):
    return _check_loaded().yetty_ygui_engine_on_resize(engine, callback, userdata)

def yetty_ygui_engine_get_zoom(engine):
    return _check_loaded().yetty_ygui_engine_get_zoom(engine)

def yetty_ygui_engine_get_scroll_x(engine):
    return _check_loaded().yetty_ygui_engine_get_scroll_x(engine)

def yetty_ygui_engine_get_scroll_y(engine):
    return _check_loaded().yetty_ygui_engine_get_scroll_y(engine)

def yetty_ygui_engine_subscribe_view_changes(engine, enable):
    return _check_loaded().yetty_ygui_engine_subscribe_view_changes(engine, enable)

def yetty_ygui_engine_set_zoom(engine, level):
    return _check_loaded().yetty_ygui_engine_set_zoom(engine, level)

def yetty_ygui_engine_scroll_to(engine, x, y):
    return _check_loaded().yetty_ygui_engine_scroll_to(engine, x, y)

def yetty_ygui_engine_scroll_by(engine, dx, dy):
    return _check_loaded().yetty_ygui_engine_scroll_by(engine, dx, dy)

def yetty_ygui_engine_button(engine, id, x, y, w, h, label):
    return _check_loaded().yetty_ygui_engine_button(engine, id, x, y, w, h, label)

def yetty_ygui_engine_label(engine, id, x, y, text):
    return _check_loaded().yetty_ygui_engine_label(engine, id, x, y, text)

def yetty_ygui_engine_slider(engine, id, x, y, w, h, min_val, max_val, value):
    return _check_loaded().yetty_ygui_engine_slider(engine, id, x, y, w, h, min_val, max_val, value)

def yetty_ygui_engine_checkbox(engine, id, x, y, w, h, label, checked):
    return _check_loaded().yetty_ygui_engine_checkbox(engine, id, x, y, w, h, label, checked)

def yetty_ygui_engine_textinput(engine, id, x, y, w, h, placeholder):
    return _check_loaded().yetty_ygui_engine_textinput(engine, id, x, y, w, h, placeholder)

def yetty_ygui_engine_panel(engine, id, x, y, w, h):
    return _check_loaded().yetty_ygui_engine_panel(engine, id, x, y, w, h)

def yetty_ygui_engine_hbox(engine, id, x, y, w, h):
    return _check_loaded().yetty_ygui_engine_hbox(engine, id, x, y, w, h)

def yetty_ygui_engine_vbox(engine, id, x, y, w, h):
    return _check_loaded().yetty_ygui_engine_vbox(engine, id, x, y, w, h)

def yetty_ygui_engine_dropdown(engine, id, x, y, w, h, options, option_count):
    return _check_loaded().yetty_ygui_engine_dropdown(engine, id, x, y, w, h, options, option_count)

def yetty_ygui_engine_progress(engine, id, x, y, w, h, value):
    return _check_loaded().yetty_ygui_engine_progress(engine, id, x, y, w, h, value)

def yetty_ygui_engine_separator(engine, id, x, y, w, h):
    return _check_loaded().yetty_ygui_engine_separator(engine, id, x, y, w, h)

def yetty_ygui_engine_colorpicker(engine, id, x, y, w, h):
    return _check_loaded().yetty_ygui_engine_colorpicker(engine, id, x, y, w, h)

def yetty_ygui_engine_popup(engine, id, x, y, w, h, label):
    return _check_loaded().yetty_ygui_engine_popup(engine, id, x, y, w, h, label)

def yetty_ygui_engine_collapsing_header(engine, id, x, y, w, h, label):
    return _check_loaded().yetty_ygui_engine_collapsing_header(engine, id, x, y, w, h, label)

def yetty_ygui_engine_tooltip(engine, id, x, y, w, h, label):
    return _check_loaded().yetty_ygui_engine_tooltip(engine, id, x, y, w, h, label)

def yetty_ygui_engine_selectable(engine, id, x, y, w, h, label):
    return _check_loaded().yetty_ygui_engine_selectable(engine, id, x, y, w, h, label)

def yetty_ygui_engine_choicebox(engine, id, x, y, w, h, options, option_count):
    return _check_loaded().yetty_ygui_engine_choicebox(engine, id, x, y, w, h, options, option_count)

def yetty_ygui_engine_vscrollbar(engine, id, x, y, w, h):
    return _check_loaded().yetty_ygui_engine_vscrollbar(engine, id, x, y, w, h)

def yetty_ygui_engine_hscrollbar(engine, id, x, y, w, h):
    return _check_loaded().yetty_ygui_engine_hscrollbar(engine, id, x, y, w, h)
